--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-numpy
-pandas
-streamlit
-scikit-learn
 matplotlib
+numpy==1.22.0
+pandas==1.3.4
+plotly==5.5.0
+streamlit==1.3.0
+scikit-learn==0.24.2
