--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,12 @@ pandas==1.3.4
 plotly==5.5.0
 streamlit==1.3.0
 scikit-learn==0.24.2
+opencv-python-headless
+matplotlib==3.5.0
+numpy==1.18.1
+opencv_python==4.5.4.58
+pandas==0.24.2
+streamlit==1.2.0
+streamlit_drawable_canvas==0.8.0
+tensorflow==2.3.1
+Keras==2.4.3
